--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -205,7 +205,7 @@
   </section>
 </div>
 <script>
-  document.addEventListener('DOMContentLoaded', function() {
+  document.addEventListener("turbo:load", function() {
     const starRatings = document.querySelectorAll('.star-rating');
 
     starRatings.forEach(starRating => {
