--- a/app/views/oeuvres/_form.html.erb
+++ b/app/views/oeuvres/_form.html.erb
@@ -38,7 +38,7 @@
   </div>
 <% end %>
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
+  document.addEventListener("turbo:load", function() {
     var oeuvreYearInput = document.getElementById("date-oeuvre-input");
     var oeuvreYearError = document.getElementById("date-oeuvre-error");
 
