--- a/app/views/pages/search_category.html.erb
+++ b/app/views/pages/search_category.html.erb
@@ -296,7 +296,7 @@
   <% end %>
 </section>
 <script>
-  document.addEventListener('DOMContentLoaded', function() {
+  document.addEventListener("turbo:load", function() {
     const cardList = document.querySelectorAll('.card-list');
 
     cardList.forEach(function(card) {
