--- a/app/views/designers/index.html.erb
+++ b/app/views/designers/index.html.erb
@@ -71,7 +71,7 @@
   </div>
 </div>
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
+  document.addEventListener("turbo:load", function() {
     let cards = document.querySelectorAll('.card');
     let currentCardIndex = 0;
     let scrolling = false;
