--- a/app/views/oeuvres/index.html.erb
+++ b/app/views/oeuvres/index.html.erb
@@ -72,7 +72,7 @@
   </div>
 </div>
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
+  document.addEventListener("turbo:load", function() {
     let cards = document.querySelectorAll('.card');
     let currentCardIndex = 0;
     let scrolling = false;
@@ -191,7 +191,7 @@
   });
 </script>
 <script>
-  document.addEventListener("DOMContentLoaded", function() {
+  document.addEventListener("turbo:load", function() {
     let startX;
     let endX;
     const swipeThreshold = 50; // Distance minimum en pixels pour être considérée comme un swipe
