--- a/app/views/pages/search_category.html.erb
+++ b/app/views/pages/search_category.html.erb
@@ -79,32 +79,32 @@
 
     /* Card */
     .flex-card-list{
-   margin-top: 32px;
-   display: flex;
-   flex-wrap:wrap;
-   justify-content:space-between;
-   gap: 1.5vw;
+      margin-top: 32px;
+      width: 100%;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 55px;
     }
     .card-list{
-   overflow: hidden;
-   width: 17.5vw;
-   height: 17.5vw;
-   display: flex;
-   align-items: end;
-   border: 1px solid #E9E9E9;
-   border-radius:5px;
-   position: relative;
+      overflow: hidden;
+      width: 17.5vw;
+      height: 17.5vw;
+      display: flex;
+      align-items: end;
+      border: 1px solid #E9E9E9;
+      border-radius:5px;
+      position: relative;
     }
     .overlay {
-   border-radius: 5px;
-   width: 100%;
-   height: 100%;
-   position: absolute;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   gap: 64px;
-   background-color: rgba(0, 0, 0, 0.5);
+      border-radius: 5px;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 64px;
+      background-color: rgba(0, 0, 0, 0.5);
     }
 
     .overlay svg {
