--- a/app/views/oeuvres/index.html.erb
+++ b/app/views/oeuvres/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Accueil Omniscient Design" %>
+<% content_for :description, "Description des œuvres disponibles sur notre site." %>
 <style>
   #oeuvres {
     transition: transform 0.5s ease-in-out;
