--- a/app/views/oeuvres/show.html.erb
+++ b/app/views/oeuvres/show.html.erb
@@ -1,1 +1,3 @@
+<% content_for :title, "#{@oeuvre.nom_oeuvre} - Omniscient Design" %>
+<% content_for :description, @oeuvre.description.truncate(160) %>
 <%= render @oeuvre %>
