--- a/app/views/designers/new.html.erb
+++ b/app/views/designers/new.html.erb
@@ -1,4 +1,4 @@
-<div class="main-div grid" style="background-color:#202020; color:#FFF; min-height:100vh;">
+<div class="grid" style="background-color:#202020; color:#FFF; min-height:100vh;">
   <section class="add-elements">
     <%= link_to add_elements_path do %>
       <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
