--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Donnez nous vos feedbacks - Omniscient Design" %>
+<% content_for :description, "Fais-nous des retours PERTINENT sur le site pour qu'on puisse avancer plus loins plus vite plus mieux ! Miam les retours on adore ça." %>
 <style>
   label {
     font-weight: 500;
@@ -109,7 +111,7 @@
     }
   }
 </style>
-<div class="main-div grid" style="background-color:#202020; color:#FFF; min-height:100vh;">
+<div class="grid" style="background-color:#202020; color:#FFF; min-height:100vh;">
   <div class="box-title">
     <p class="subtitle-top">Votre contribution</p>
     <h1 class="title-add-elements">Exprimer votre avis</h1>
