--- a/app/views/oeuvres/edit.html.erb
+++ b/app/views/oeuvres/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="main-div grid" style="background-color:#202020; color:#FFF; min-height:100vh;">
+<div class="grid" style="background-color:#202020; color:#FFF; min-height:100vh;">
   <h1 class="title-add-elements">Modifier une référence</h1>
   <%= render "form", oeuvre: @oeuvre %>
   <br>
