--- a/app/views/pages/add_elements.html.erb
+++ b/app/views/pages/add_elements.html.erb
@@ -1,35 +1,13 @@
+<% content_for :title, "Ajoute des références - Omniscient Design" %>
+<% content_for :description, "Ici, tu peux ajouter une référence et rejoindre la grande famille des contributeurs d'Omniscient Design ! Mais attention, suis bien les règles." %>
 <style>
-  /* Add Element */
-  .button-add {
-    font-weight: 500;
-    font-size: 22px;
-    color: #202020;
-    border-radius: 10px;
-    background-color: #FFF;
-    padding: 90px 150px;
-  }
-
-  .button-add:hover {
-    opacity: 0.8;
-  }
-
   .add-flex {
     margin-top: 100px;
     display: flex;
     gap: 80px;
   }
 
-
   @media screen and (min-width:0px) and (max-width:349px) {
-    .button-add {
-      width: 82vw;
-      height: 120px;
-      font-size: 16px;
-      padding: 0px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
 
     .add-flex {
       margin-top: 32px;
@@ -41,15 +19,6 @@
     }
   }
   @media screen and (min-width:350px) and (max-width:800px) {
-    .button-add {
-      width: 82vw;
-      height: 140px;
-      font-size: 18px;
-      padding: 0px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
 
     .add-flex {
       margin-top: 32px;
@@ -61,15 +30,6 @@
     }
   }
   @media screen and (min-width:801px) and (max-width:1050px){
-    .button-add {
-      width: 62vw;
-      height: 140px;
-      font-size: 18px;
-      padding: 0px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
 
     .add-flex {
       margin-top: 32px;
@@ -81,7 +41,7 @@
     }
   }
 </style>
-<div class="main-div grid" style="background-color:#202020; color:#FFF; min-height:100vh;">
+<div class="grid" style="background-color:#202020; color:#FFF; min-height:100vh;">
   <section class="add-elements">
     <p class="subtitle-top">Votre contribution</p>
     <h1 class="title-add-elements">Ajouter une référence</h1>
