--- a/app/assets/stylesheets/pages/_defaultpage.scss
+++ b/app/assets/stylesheets/pages/_defaultpage.scss
@@ -1,6 +1,8 @@
-@import 'variables';
+@import 'abstracts/variables';
+
 .grid-1{
   padding: 0 10vw;
+  margin-top: 64px;
 }
 .top-default-page{
   display: flex;
