--- a/app/views/designers/_card.html.erb
+++ b/app/views/designers/_card.html.erb
@@ -5,13 +5,13 @@
       <% if asset_exists?(image_path) %>
         <div class="img-card" style="background-image: url('<%= asset_path(image_path) %>'); background-repeat: no-repeat; background-position: center center; background-size: cover;"></div>
       <% else %>
-        <% Rails.logger.debug("Image not found, using fallback: #{image_path}") %>
+        <% Rails.logger.debug("Image not found : #{image_path}") %>
         <div class="img-card" style="background-image: url('<%= card.image%>'); background-repeat: no-repeat; background-position: center center; background-size: cover;"></div>
       <% end %>
     </div>
-    <div class="text-card">
+    <div class="container-text-card">
       <% if card.country.present? %>
-        <p class="designer-card"><%= card.country.country %></p>
+        <p class="subtitle-card"><%= card.country.country %></p>
       <% end %>
       <h2 class="title-card"><%= card.nom_designer %></h2>
       <h3 class="title-description-card">Description</h3>
