--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,19 +1,11 @@
+<% content_for :title, "Rapport de mise à jour - Omniscient Design" %>
+<% content_for :description, "Reste au courant des dernières mises à jour d'Omniscient Design... En vrai, qu'est-ce que tu fais là ? Tu es perdu ?" %>
 <style>
-  h2{
-    margin-top: 64px;
-  }
   h3{
     margin-top: 32px;
-    color: #202020;
-    font-size: 20px;
-    font-weight: 500;
     margin-bottom: 18px;
   }
-  .grid-1 p{
-    color:#8D9299;
-    font-size: 18px;
-    line-height:150%;
-  }
+
   .black{
     color:#202020;
   }
@@ -27,7 +19,6 @@
     }
     h2{
       margin-top: 48px;
-      font-size: 16px;
       margin-bottom: 18px;
     }
     .grid-1 p{
@@ -41,7 +32,6 @@
     }
     h2{
       margin-top: 48px;
-      font-size: 18px;
       margin-bottom: 18px;
     }
     .grid-1 p{
@@ -54,7 +44,6 @@
     }
     h2{
       margin-top: 52px;
-      font-size: 20px;
     }
     .grid-1 p{
       font-size: 17px;
@@ -62,28 +51,27 @@
     }
   }
 </style>
-<div class="main-div">
-  <section class="top-default-page">
-    <%= link_to profil_path do %>
-      <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M21 10.2168L1.57848 10.2168M1.57848 10.2168L8.86155 18.4336M1.57848 10.2168L8.86155 2" stroke="white" stroke-width="2" stroke-linecap="square"/>
-      </svg>
-    <% end %>
-    <h1>Rapport de mise à jour</h1>
-  </section>
-  <section class="grid-1">
-    <p>Consultez les dernières modifications et améliorations apportées.</p>
-    <h2>Mise à jour du 15 août 2024</h2>
-    <h3>Nouveautés</h3>
-    <p>• Ajout de <span class="black medium">l'e-mail de confirmation</span> pour la création de compte.<br>
-      • Ajout du <span class="black medium">mot de passe oublié</span> pour la connexion à un compte.<br>
-    </p>
-    <h3>Corrections</h3>
-    <p> • Correction des <span class="black medium">boutons de retour</span>.<br>
-      • Correction d'un bug qui empêchait de <span class="black medium">voir les notifications</span>.
-    </p>
-    <h2>Mise à jour du 14 août 2024</h2>
-    <p>  • Lancement de la <span class="black medium">bêta fermée</span> avec les fonctionnalités de base.</p>
-    <h3>Corrections</h3>
-    <p> • Correction des <span class="black medium">images non affichées</span>.</p>
-  </section>
+<section class="top-default-page">
+  <%= link_to profil_path do %>
+    <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M21 10.2168L1.57848 10.2168M1.57848 10.2168L8.86155 18.4336M1.57848 10.2168L8.86155 2" stroke="white" stroke-width="2" stroke-linecap="square"/>
+    </svg>
+  <% end %>
+  <h1>Rapport de mise à jour</h1>
+</section>
+<section class="grid-1">
+  <p>Consultez les dernières modifications et améliorations apportées.</p>
+  <h2>Mise à jour du 15 août 2024</h2>
+  <h3>Nouveautés</h3>
+  <p>• Ajout de <span class="black medium">l'e-mail de confirmation</span> pour la création de compte.<br>
+    • Ajout du <span class="black medium">mot de passe oublié</span> pour la connexion à un compte.<br>
+  </p>
+  <h3>Corrections</h3>
+  <p> • Correction des <span class="black medium">boutons de retour</span>.<br>
+    • Correction d'un bug qui empêchait de <span class="black medium">voir les notifications</span>.
+  </p>
+  <h2>Mise à jour du 14 août 2024</h2>
+  <p>  • Lancement de la <span class="black medium">bêta fermée</span> avec les fonctionnalités de base.</p>
+  <h3>Corrections</h3>
+  <p> • Correction des <span class="black medium">images non affichées</span>.</p>
+</section>
