--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -1,65 +1,4 @@
-<style>
-  .logo-log {
-    position: absolute;
-    left: 35px;
-    top: 35px;
-  }
-
-  .log {
-    position: relative;
-    background-image: url('/assets/bg-presentation.png');
-    background-repeat: no-repeat;
-    height: 100vh;
-    background-size: cover;
-  }
-
-  .box-log {
-    position: absolute;
-    bottom: 35px;
-    padding: 0px 8vw
-  }
-
-  .form {
-    margin-top: 32px;
-    width: 60vw;
-    display: flex;
-    gap: 16px;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    padding: 30px 0;
-    border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-  }
-
-  form {
-    display: flex;
-    gap: 16px;
-    flex-direction: column;
-  }
-
-    .sign-up-in{
-  color: #fff;
-    }
-    .sign-up-in:hover{
-  text-decoration: underline;
-    }
-
-     .sign-up-in{
-  text-align: center;
-     }
-    .btn-login {
-  margin-top: 16px;
-  width: 22vw;
-  height: 65px;
-    }
-
-    .actions {
-  margin-left: auto; /* Pour aligner à droite */
-    }
-</style>
-<div class="main-div log" style="color:#FFF; min-height:100vh;">
+<div class="log" style="color:#FFF; min-height:100vh;">
   <%= image_tag "logo-white.svg", alt: "", class: "logo-log" %>
   <section class="box-log">
     <h1>Recevoir l'email de confirmation</h1>
