--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,181 +1,6 @@
-<style>
-  .logo-log {
-    position: absolute;
-    left: 35px;
-    top: 35px;
-  }
-
-  .log {
-    position: relative;
-    background-image: url('/assets/bg-presentation2.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 1450px;
-  }
-
-  .box-log {
-    position: absolute;
-    top: 270px;
-    padding: 0px 8vw
-  }
-
-  .form {
-    margin-top: 32px;
-    width: 60vw;
-    display: flex;
-    gap: 16px;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    padding: 30px 0;
-    border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-    overflow: hidden;
-  }
-
-  form {
-    display: flex;
-    gap: 16px;
-    flex-direction: column;
-  }
-
-  .sign-up-in,
-  .forgot-password {
-    color: #fff;
-  }
-  .sign-up-in:hover,
-  .forgot-password:hover{
-    text-decoration: underline;
-  }
-   .forgot-password{
-    text-align: right;
-   }
-   .sign-up-in, .email-confirmation{
-    text-align: center;
-   }
-  .btn-login {
-    margin-top: 16px;
-    width: 22vw;
-    height: 65px;
-  }
-
-  .actions {
-    margin-left: auto; /* Pour aligner à droite */
-  }
-
-  .password-container {
-    position: relative;
-  }
-
-  .password-container .toggle-password {
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    background: none;
-    border: none;
-    cursor: pointer;
-    padding: 0;
-    fill:#202020;
-  }
-
-  .rgpd {
-    width: 50vw;
-  }
-  .rgpd a {
-    color:#FFF;
-    font-weight: 500;
-  }
-  @media screen and (min-width:0px) and (max-width:349px) {
-    form p {
-      width: 60vw;
-      font-size: 15px;
-    }
-      .logo-log {
-      width: 115px;
-      left: 15px;
-    }
-
-    .box-log {
-      padding: 100px 5vw;
-    }
-
-    form{
-      width: 80vw;
-    }
-    .form {
-      margin-top: 32px;
-      width: 90vw;
-      padding: 20px 0;
-    }
-
-    .btn-login {
-      width: 80vw;
-      height: 65px;
-    }
-    input[type=text],
-    input[type=date],
-    input[type=email],
-    input[type=password],
-    select {
-      width: 65vw;
-      height: 50px;
-    }
-    .remember-me{
-      margin-top:0px;
-    }
-    .sign-up-in, .forgot-password{
-      font-size: 14px;
-    }
-    .actions {
-      margin-left: 0; /* Pour aligner à droite */
-    }
-  }
-  @media screen and (min-width:350px) and (max-width:800px) {
-      .logo-log {
-      width: 145px;
-    }
-
-    .box-log {
-      padding: 200px 6vw;
-    }
-
-    .form {
-      margin-top: 32px;
-      width: 84vw;
-      display: flex;
-      gap: 16px;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-      padding: 30px 0;
-      border-radius: 5px;
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: 999;
-    }
-
-    .btn-login {
-      width: 72vw;
-      height: 65px;
-    }
-    input[type=text],
-    input[type=date],
-    input[type=email],
-    input[type=password],
-    select {
-      width: 65vw;
-      height: 60px;
-    }
-    .remember-me{
-      margin-top:0px;
-    }
-    .sign-up-in, .forgot-password{
-      font-size: 14px;
-    }
-  }
-</style>
-<div class="main-div log" style="background-color:#202020; color:#FFF; min-height:100vh;">
+<% content_for :title, "S'inscrire - Omniscient Design" %>
+<% content_for :description, "Inscris-toi sur Omniscient Design pour devenir un vrai pro dans l'univers du design. Rejoins une communauté de passionnés prête à tout pour rendre le design accessible." %>
+<div class="log" style="background-color:#202020; color:#FFF; min-height:100vh;">
   <%= image_tag "logo-white.svg", alt: "", class: "logo-log" %>
   <section class="box-log">
     <h1>S’inscrire</h1>
@@ -236,7 +61,6 @@
           <%= f.check_box :rgpd_consent, required: true %>
           <%= f.label :rgpd_consent, ("J'accepte que mes données personnelles soient collectées et traitées conformément à la " + link_to('Politique de confidentialité', politiquedeconfidentialite_path, target: "_blank")).html_safe, class: "rgpd-label" %>
         </div>
-
         <div class="actions">
           <%= f.submit "S’inscrire ⏩️", class:"button dark btn-login" %>
         </div>
