--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Profil - Omniscient Design" %>
+<% content_for :description, "Bienvenue dans ton profil, ton espace personnel. Modifie tes informations, contacte-nous ou découvre notre superbe accessibilité !" %>
 <style>
   .top-profil{
     padding: 64px 10vw;
